fix: disable overscroll bounce on iOS/macOS

--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -15,6 +15,7 @@ html {
   scroll-behavior: smooth;
   text-size-adjust: 100%;
   hanging-punctuation: first last;
+  overscroll-behavior: none;
 }
 
 @media (prefers-reduced-motion: reduce) {
